--- a/app/views/roomtypes/edit.html.erb
+++ b/app/views/roomtypes/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Roomtype</h1>
+<h1 align="center" >Editing Roomtype</h1>
 
 <%= render 'form' %>
-
 <%= link_to 'Show', @roomtype %> |
 <%= link_to 'Back', roomtypes_path %>
