--- a/app/views/hotels/_form1.html.erb
+++ b/app/views/hotels/_form1.html.erb
@@ -40,10 +40,9 @@
           </div>
           <div class="field form-group">
             <div class="control-label col-sm-2"><%= f.label :rating %><sup>*</sup><strong>:</strong></div>
-            <div class="col-sm-4">
-              <input id="StarRatingSlider slider" class="form-control" type="range" min="0" max="7" step="0.1" oninput="sliderChange(this.value)">
+             <div class="col-sm-4" ><%= f.range_field :rating, :min=>0, :max=>7, :step=>0.1, :class=>"form-control removeborder" %>
             </div>
-            <div class="col-sm-4" style="font-weight: bold;"><%= f.text_field :rating, :class=>"form-control removeborder", :disabled=>true, :disabled=>true %></div>
+            <div class="col-sm-4" style="font-weight: bold;" onkeydown="return false"><%= f.text_field :rating, :class=>"form-control removeborder", :id=>'SliderValue', :disabled=>true %></div>
           </div>
           <div class="field form-group">
             <div class="control-label col-sm-2"><%= f.label :year %><sup>*</sup><strong>:</strong></div>
@@ -52,7 +51,7 @@
 
            <div class="row">
             <div class="col-sm-2 ">
-              <label class="control-label" for="CheckInTime" >Check In Time:</label>
+              <label class="control-label PosChkInOut" for="CheckInTime" >Check In Time:</label>
             </div>
             <div class="col-sm-4">
               <div class="col-sm-12" >
@@ -94,7 +93,7 @@
           </div>
           <div class="row">
               <div class="col-sm-2" >
-                <label class="control-label" for="CheckOutTime">Check Out Time:</label>
+                <label class="control-label PosChkInOut" for="CheckOutTime">Check Out Time:</label>
               </div>
               <div class="col-sm-4" >
                 <div class="col-sm-12">
@@ -1043,6 +1042,13 @@
 <% end %>
 
 <style>
+@media only screen and (min-width:786px){
+.PosChkInOut {
+position: absolute;
+right:14px;
+}
+}
+
 .fixedtextarea {
   resize: none;
   max-width: 955px;
@@ -1078,5 +1084,183 @@
     transform: scale(2);
     transition-duration: 0.2s;
   }
+  .removeborder{
+    border: none;
+    outline: none;
+    box-shadow: none;
+    pointer-events:none
+  }
 
 </style>
+<script type="text/javascript">
+
+ function sliderChange(x)
+    {
+      document.getElementById('SliderValue').value=x;
+    }
+
+  $(document).ready(function(){
+
+  $('#BasicAmenties').slideUp(1);
+  $('#MediaAmenties').slideUp(1);
+  $('#FoodAmenties').slideUp(1);
+  $('#DisabilityAmenties').slideUp(1);
+  $('#EntertainmentAmenties').slideUp(1);
+
+  var basicamenities=1;
+  var mediaamenities=1;
+  var foodamenities=1;
+  var disabilityamenities=1;
+  var entertainmentamenities=1;
+
+  function basicAmenities(){
+    if(basicamenities==1)
+    {
+      $('#BasicAmenties').slideDown(250);
+      $('#PlusSignA').removeClass('RotatePlusB');
+      $('#PlusSignA').addClass('RotatePlusA');
+    }
+    else
+    {
+      $('#BasicAmenties').slideUp(250);
+      $('#PlusSignA').removeClass('RotatePlusA');
+      $('#PlusSignA').addClass('RotatePlusB');
+    }
+    basicamenities=(basicamenities)*(-1);
+  }
+
+  function MediaAmenities(){
+    if(mediaamenities==1)
+    {
+      $('#MediaAmenties').slideDown(250);
+      $('#PlusSignB').removeClass('RotatePlusB');
+      $('#PlusSignB').addClass('RotatePlusA');
+    }
+    else
+    {
+      $('#MediaAmenties').slideUp(250);
+      $('#PlusSignB').removeClass('RotatePlusA');
+      $('#PlusSignB').addClass('RotatePlusB');
+    }
+    mediaamenities=(mediaamenities)*(-1);
+  }
+
+  function FoodAmenities(){
+    if(foodamenities==1)
+    {
+      $('#FoodAmenties').slideDown(250);
+      $('#PlusSignC').removeClass('RotatePlusB');
+      $('#PlusSignC').addClass('RotatePlusA');
+    }
+    else
+    {
+      $('#FoodAmenties').slideUp(250);
+      $('#PlusSignC').removeClass('RotatePlusA');
+      $('#PlusSignC').addClass('RotatePlusB');
+    }
+    foodamenities=(foodamenities)*(-1);
+  }
+
+  function DisabilityAmenities(){
+    if(disabilityamenities==1)
+    {
+      $('#DisabilityAmenties').slideDown(250);
+      $('#PlusSignD').removeClass('RotatePlusB');
+      $('#PlusSignD').addClass('RotatePlusA');
+    }
+    else
+    {
+      $('#DisabilityAmenties').slideUp(250);
+      $('#PlusSignD').removeClass('RotatePlusA');
+      $('#PlusSignD').addClass('RotatePlusB');
+    }
+    disabilityamenities=(disabilityamenities)*(-1);
+  }
+
+  function EntertainmentAmenities(){
+    if(entertainmentamenities==1)
+    {
+      $('#EntertainmentAmenties').slideDown(250);
+      $('#PlusSignE').removeClass('RotatePlusB');
+      $('#PlusSignE').addClass('RotatePlusA');
+    }
+    else
+    {
+      $('#EntertainmentAmenties').slideUp(250);
+      $('#PlusSignE').removeClass('RotatePlusA');
+      $('#PlusSignE').addClass('RotatePlusB');
+    }
+    entertainmentamenities=(entertainmentamenities)*(-1);
+  }
+  $('#BasicAmenitiesBtn').click(function(){
+    
+    mediaamenities=-1;
+    foodamenities=-1;
+    disabilityamenities=-1;
+    entertainmentamenities=-1;
+
+    basicAmenities();
+    MediaAmenities();
+    FoodAmenities();
+    DisabilityAmenities();
+    EntertainmentAmenities();
+  });
+
+  $('#MediaAmenitiesBtn').click(function(){
+
+    basicamenities=-1;
+    foodamenities=-1;
+    disabilityamenities=-1;
+    entertainmentamenities=-1;
+
+    basicAmenities();
+    MediaAmenities();
+    FoodAmenities();
+    DisabilityAmenities();
+    EntertainmentAmenities();
+  });
+
+  $('#FoodAmenitiesBtn').click(function(){
+
+    basicamenities=-1;
+    mediaamenities=-1;
+    disabilityamenities=-1;
+    entertainmentamenities=-1;
+
+    basicAmenities();
+    MediaAmenities();
+    FoodAmenities();
+    DisabilityAmenities();
+    EntertainmentAmenities();
+  });
+
+  $('#DisabilityAmentiesBtn').click(function(){
+
+    basicamenities=-1;
+    mediaamenities=-1;
+    foodamenities=-1;
+    entertainmentamenities=-1;
+
+    basicAmenities();
+    MediaAmenities();
+    FoodAmenities();
+    DisabilityAmenities();
+    EntertainmentAmenities();
+  });
+
+
+  $('#EntertainmentAmentiesBtn').click(function(){
+
+    basicamenities=-1;
+    mediaamenities=-1;
+    foodamenities=-1;
+    disabilityamenities=-1;
+
+    basicAmenities();
+    MediaAmenities();
+    FoodAmenities();
+    DisabilityAmenities();
+    EntertainmentAmenities();
+  });
+});
+</script>
