--- a/app/views/room_papa/index.html.erb
+++ b/app/views/room_papa/index.html.erb
@@ -1,5 +1,3 @@
-<div class="container" style="background-color: white;">
-	<div class="form form-horizontal">
     	<%if current_user && !current_user.hotel%>
 	
 	Your have not filled your details yet!!
@@ -13,10 +11,11 @@
 
 <%if current_user.hotel.roomtypes.count>0%>
 
-	
-	 
-	<button class="btn btn-warning pull-right btn-md"><%@hotel = current_user.hotel%><%= link_to 'Edit', edit_hotel_path(@hotel) %></button>
-		<h1 align="center" style="text-decoration: underline;">Hotel Info</h1>
+<h1 align="center" style="text-decoration: underline;">Hotel Info</h1>
+
+<div class="container" style="background-color: white;">
+	<div class="form form-horizontal">	 
+	<%@hotel = current_user.hotel%><%= link_to 'Edit', edit_hotel_path(@hotel),:class => "btn btn-warning pull-right"%>
 	<h2 class="col-sm-offset-2">Basic Info</h2>
 
 	<div class="form-group">
@@ -54,6 +53,8 @@
 		</div>
 	</div>
 
+
+
 	<div class="form-group">
 		<label class="control-label col-sm-2" for="Rating">Rating:</label>
 		<div class="col-sm-4">
@@ -72,7 +73,7 @@
 
 	<div class="row">
 		<div class="col-sm-2">
-			<label class="control-label" for="CheckInTime" >Check In Time:</label>
+			<label class="control-label PosChkInOut" for="CheckInTime" >Check In Time:</label>
 		</div>
 		<div class="col-sm-4">
 			<div class="row" >
@@ -113,7 +114,7 @@
 
 	<div class="row">
 			<div class="col-sm-2" >
-				<label class="control-label" for="CheckOutTime">Check Out Time:</label>
+				<label class="control-label PosChkInOut" for="CheckOutTime">Check Out Time:</label>
 			</div>
 			<div class="col-sm-4" >
 				<div class="row">
@@ -541,25 +542,39 @@
 		</div>
 	</div>
 
-	<div>
+	<div class="row">
 		<h2 class="col-sm-offset-2">Policies</h2 >
 	<div class="col-sm-offset-1" style="padding-left: 25px;">
 	<textarea class="form-group col-xs-12 col-sm-12" rows="6"disabled="true" style="max-width: 930px;"><%= @hotel.policies %></textarea>
 	</div>
 	</div>
-	<div>
-		<%current_user.hotel.images.each do |hs|%>
-			<%=image_tag(hs.url, height: '100', width: '100')%>
-		<%end%>
+	<div class="row">
+		<div class="col-sm-offset-2">
+			<h2>Images</h2>
+		</div>
+		<div class="col-sm-10 col-sm-offset-1">
+			<%current_user.hotel.images.each do |hs|%>
+				<%=image_tag(hs.url, height: '100', width: '100')%>
+			<%end%>
+		</div>
 	</div>
+			
+
+	
 <%else%>
 	Congratulations!! your have moved one step towards completion<br>
 	kindly fill  <%=link_to "Room Types",new_roomtype_path(id: current_user.hotel.id),method: :get%>
 <%end%>
-<%end%>
-</form>
 </div>
+<%end%>
 <style>
+	@media only screen and (min-width:786px){
+		.PosChkInOut {
+			position: absolute;
+			right:14px;
+		}
+	}
+
 	.AccordianBtn{
 		height:50px;
 		border-radius: 0px;
@@ -590,3 +605,174 @@
 	}
 
 </style>
+<script type="text/javascript">
+	$(document).ready(function(){
+  $('#BasicAmenties').slideUp(1);
+  $('#MediaAmenties').slideUp(1);
+  $('#FoodAmenties').slideUp(1);
+  $('#DisabilityAmenties').slideUp(1);
+  $('#EntertainmentAmenties').slideUp(1);
+
+  var basicamenities=1;
+  var mediaamenities=1;
+  var foodamenities=1;
+  var disabilityamenities=1;
+  var entertainmentamenities=1;
+
+  function basicAmenities(){
+    if(basicamenities==1)
+    {
+      $('#BasicAmenties').slideDown(250);
+      $('#PlusSignA').removeClass('RotatePlusB');
+      $('#PlusSignA').addClass('RotatePlusA');
+    }
+    else
+    {
+      $('#BasicAmenties').slideUp(250);
+      $('#PlusSignA').removeClass('RotatePlusA');
+      $('#PlusSignA').addClass('RotatePlusB');
+    }
+    basicamenities=(basicamenities)*(-1);
+  }
+
+  function MediaAmenities(){
+    if(mediaamenities==1)
+    {
+      $('#MediaAmenties').slideDown(250);
+      $('#PlusSignB').removeClass('RotatePlusB');
+      $('#PlusSignB').addClass('RotatePlusA');
+    }
+    else
+    {
+      $('#MediaAmenties').slideUp(250);
+      $('#PlusSignB').removeClass('RotatePlusA');
+      $('#PlusSignB').addClass('RotatePlusB');
+    }
+    mediaamenities=(mediaamenities)*(-1);
+  }
+
+  function FoodAmenities(){
+    if(foodamenities==1)
+    {
+      $('#FoodAmenties').slideDown(250);
+      $('#PlusSignC').removeClass('RotatePlusB');
+      $('#PlusSignC').addClass('RotatePlusA');
+    }
+    else
+    {
+      $('#FoodAmenties').slideUp(250);
+      $('#PlusSignC').removeClass('RotatePlusA');
+      $('#PlusSignC').addClass('RotatePlusB');
+    }
+    foodamenities=(foodamenities)*(-1);
+  }
+
+  function DisabilityAmenities(){
+    if(disabilityamenities==1)
+    {
+      $('#DisabilityAmenties').slideDown(250);
+      $('#PlusSignD').removeClass('RotatePlusB');
+      $('#PlusSignD').addClass('RotatePlusA');
+    }
+    else
+    {
+      $('#DisabilityAmenties').slideUp(250);
+      $('#PlusSignD').removeClass('RotatePlusA');
+      $('#PlusSignD').addClass('RotatePlusB');
+    }
+    disabilityamenities=(disabilityamenities)*(-1);
+  }
+
+  function EntertainmentAmenities(){
+    if(entertainmentamenities==1)
+    {
+      $('#EntertainmentAmenties').slideDown(250);
+      $('#PlusSignE').removeClass('RotatePlusB');
+      $('#PlusSignE').addClass('RotatePlusA');
+    }
+    else
+    {
+      $('#EntertainmentAmenties').slideUp(250);
+      $('#PlusSignE').removeClass('RotatePlusA');
+      $('#PlusSignE').addClass('RotatePlusB');
+    }
+    entertainmentamenities=(entertainmentamenities)*(-1);
+  }
+  $('#BasicAmenitiesBtn').click(function(){
+    
+    mediaamenities=-1;
+    foodamenities=-1;
+    disabilityamenities=-1;
+    entertainmentamenities=-1;
+
+    basicAmenities();
+    MediaAmenities();
+    FoodAmenities();
+    DisabilityAmenities();
+    EntertainmentAmenities();
+  });
+
+  $('#MediaAmenitiesBtn').click(function(){
+
+    basicamenities=-1;
+    foodamenities=-1;
+    disabilityamenities=-1;
+    entertainmentamenities=-1;
+
+    basicAmenities();
+    MediaAmenities();
+    FoodAmenities();
+    DisabilityAmenities();
+    EntertainmentAmenities();
+  });
+
+  $('#FoodAmenitiesBtn').click(function(){
+
+    basicamenities=-1;
+    mediaamenities=-1;
+    disabilityamenities=-1;
+    entertainmentamenities=-1;
+
+    basicAmenities();
+    MediaAmenities();
+    FoodAmenities();
+    DisabilityAmenities();
+    EntertainmentAmenities();
+  });
+
+  $('#DisabilityAmentiesBtn').click(function(){
+
+    basicamenities=-1;
+    mediaamenities=-1;
+    foodamenities=-1;
+    entertainmentamenities=-1;
+
+    basicAmenities();
+    MediaAmenities();
+    FoodAmenities();
+    DisabilityAmenities();
+    EntertainmentAmenities();
+  });
+
+
+  $('#EntertainmentAmentiesBtn').click(function(){
+
+    basicamenities=-1;
+    mediaamenities=-1;
+    foodamenities=-1;
+    disabilityamenities=-1;
+
+    basicAmenities();
+    MediaAmenities();
+    FoodAmenities();
+    DisabilityAmenities();
+    EntertainmentAmenities();
+  });
+});
+</script>
+
+
+
+
+
+
