--- a/app/views/room_papa/main.html.erb
+++ b/app/views/room_papa/main.html.erb
@@ -1,91 +1,249 @@
+<style rel="stylesheet">
+.daterangepicker{
+  border-radius: 0px!important;
+}
+.StickNavbarOnTop
+{
+   position: fixed !important;
+   top:0  ;
+   z-index: 1!important;
+   width: 102.2%!important;
+ }
+
+.HotelBlock:hover{
+  border-radius: 0px;
+  transition-duration: 0.3s;
+  box-shadow: 0px 5px 10px 2px;
+  transform: scale(1.015);
+}
+.LocationBlock:hover {
+  border-radius: 0px;
+  transition-duration: 0.3s;
+  box-shadow: 0px 5px 10px 2px;
+  transform: scale(1.015);
+}
+.LocationBlock>h3{
+  text-shadow: 1px 1px black;
+  color:white;
+  padding-left:20px;
+  padding-top:10px;
+  margin-bottom: 0px;
+}
+.HotelBlock>h3{
+  text-shadow: 1px 1px black;
+  color:white;
+  padding-left:20px;
+  padding-top:10px;
+  margin-bottom: 0px;
+}
+.LocationBlock>h5{
+  padding-top: 0px;
+  margin-top: 0px;
+  color: white;
+  text-shadow: 1px 1px black;
+  margin-left:20px;
+}
+.HotelBlock>h5{
+  padding-top: 0px;
+  margin-top: 0px;
+  color: white;
+  text-shadow: 1px 1px black;
+  margin-left:20px;
+}
+
+.LocationBlock>.pricetag{
+  position: absolute;
+  height:40px;
+  bottom:-10px;
+  right: 0px;
+  padding-right:20px;
+  color: white;
+  text-shadow: 1px 1px black;
+}
+.HotelBlock>.pricetag{
+  position: absolute;
+  height:40px;
+  bottom:-10px;
+  left: 35px;
+  padding-right:20px;
+  color: white;
+  text-shadow: 1px 1px black;
+}
+
+.EdgesSharp {
+  border-radius: 0px !important;
+}
+
+.NavbarStyle {
+    padding: 10px;
+  }
+
+.FontSize {
+    font-size: 10px;
+  }
+
+
+.NavbarTwoTop{
+  padding-top: 0px;
+  background-color: orange;
+
+}
+.FontForInput{
+  font-size:14px !important
+}
+.NavbarTwo{
+padding-top: 0px;
+border-style: none!important;
+background-color: orange!important;
+}
+
+
+@media only screen and (min-width:1px){
+  .AfterPadding{
+   padding-top: 65px;
+  }
+}
+
+@media only screen and (min-width:768px){
+  .drpdwn{
+  position:absolute;
+  z-index:1;
+  width : 91.5%;
+  padding-left: 0px;
+  }
+  .AfterPadding{
+   padding-top: 130px;
+  }
+}
+
+@media only screen and (min-width:785px){
+  .drpdwn{
+  position:absolute;
+  z-index:1;
+  width : 87%;
+  padding-left: 15px;
+  }
+}
+
+@media only screen and (min-width:817px){
+  .drpdwn{
+  position:absolute;
+  z-index:1;
+  width : 91.8%;
+  padding-left: 0px;
+
+  }
+}
+
+@media only screen and (min-width:992px){
+  .drpdwnhe{
+   width : 93.6%;
+  position:absolute;
+  z-index:1;
+  padding-left: 0px;
+  }
+}
+
+@media only screen and (min-width:1200px){
+  .drpdwnhe{
+   width : 89.5%;
+  position:absolute;
+  z-index:1;
+  padding-left: 0px;
+  }
+  .AfterPadding{
+   padding-top: 65px;
+  }
+}
+</style>
+
 <!-- top navbar -->
-<div class="row">
-  <div class="container-fluidf NavbarTwoTop">
-    <div class="container">
-      <div class="col-sm-12">
-        <h3>Find Deals for Any Season</h3>
-        <h5>From cozy country homes to funky city apartments</h5>
-      </div>
+<div class="row" id="NavbarTwo">
+  <div class="navbar-header" id="a" style="margin: 0px; padding: 0px;">
+    <div type="button" class="navbar-toggle btn btn-block" data-toggle="collapse" data-target="#NavbarTwoBlock" style="background:orange;margin:-1px;color:white;font-size:1.4em;">
+      Quick Book
     </div>
   </div>
-  <nav class="navbar navbar-default NavbarTwo" id="NavbarTwo" style="background:red">
-    <div class="container">
-      <ul class="nav navbar-nav NavbarStyle" >
+  <nav class=" navbar-default NavbarTwo collapse navbar-collapse" id="NavbarTwoBlock">
+    <div class="" id="ContainerOrRow">
+      <ul class="nav navbar-nav NavbarStyle">
         <li class="col-xs-12 col-sm-6 col-md-6 col-lg-3 FontSize">
-          <div class="form">
+          <div class="FormOrRow">
             <div class="input-group ">
             <span class="input-group-addon EdgesSharp"><i id="DestinationSymbol" class="glyphicon glyphicon-map-marker"></i></span>
-            <input id="Destination" type="text" class="form-control EdgesSharp input-lg FontForInput" placeholder="Destination" name = 'city'>
+            <input id="Destination" type="text" class="form-control EdgesSharp input-lg FontForInput" placeholder="Destination">
             </div>
           </div>
         </li>
         <li class="col-xs-12 col-sm-6 col-md-6 col-lg-4 FontSize">
-          <div class="form">
+          <div class="FormOrRow">
             <div class="input-group">
               <span class="input-group-addon EdgesSharp"><i class="glyphicon glyphicon-calendar"></i></span>
-              <input class="form-control EdgesSharp input-lg FontForInput" id="Calendar"type="text" name="datefilter" value="" onkeydown="return false" placeholder="Check-In - Check-Out" name = 'daterange'/>
+              <input class="form-control EdgesSharp input-lg FontForInput" id="Calendar"type="text" name="datefilter" value="" onkeydown="return false" placeholder="Check-In - Check-Out" />
             </div>
           </div>
         </li>
         <div class="hidden-xs hidden-lg" style="padding-top: 20px">&nbsp</div>
         <li class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
-          <div style="display: flex;">
+          <div style="display: flex;" class="FormOrRow">
             <div class="col-xs-2" style="height:45px;max-width:39px;border: solid 1px #CCCCCC; border-right:none;background-color:#EEEEEE">
              <i class="fa fa-bed"style="position:absolute;left:5px;font-size:22px;top: 10px;color: #545253;"></i>
              </div>
             <input id="RACShow" onkeydown="return false" type="text" class="col-xs-10 form-control EdgesSharp" style="height:45px;" placeholder="Rooms:0 Adults:0 Child:0">
           </div>
-          <div class="drpdwn drpdwnhe" style="display:none">
-            <div class="col-sm-12" style="background:white">
-              <div class="row" id="TotalRoom" style="padding-left:5px;padding-right:5px">
-              </div>
-              <div class="row" style="padding-left:5px;padding-right:5px">
-                <div class="row">
-                  <div class="col-sm-12">
-                    <h5>
-                      Room Details
-                    </h5>
+          <div class="drpdwn drpdwnhe"style="display:none">
+            <div class="" id="DropdownBlockRAC">
+              <div class="col-sm-12" style="background:white">
+                <div class="row" id="TotalRoom" style="padding-left:5px;padding-right:5px">
+                </div>
+                <div class="row" style="padding-left:5px;padding-right:5px">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <h5>
+                        Room Details
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-8">
+                      Adults
+                    </div>
+                    <div class="col-sm-4">
+                      <select class="form-control control-label input-sm EdgesSharp" id="NoOfAdult">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="row" style="padding-top:10px;padding-bottom:10px;">
+                    <div class="col-sm-8">
+                      Children
+                    </div>
+                    <div class="col-sm-4">
+                      <select class="form-control control-label input-sm EdgesSharp" id="NoOfChild">
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="row" style="padding-bottom:5px;" id="ChildAgeCol">
                   </div>
                 </div>
-                <div class="row">
-                  <div class="col-sm-8">
-                    Adults
-                  </div>
-                  <div class="col-sm-4">
-                    <select class="form-control control-label input-sm EdgesSharp" id="NoOfAdult">
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                      <option value="5">5</option>
-                      <option value="6">6</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="row" style="padding-top:10px;padding-bottom:10px;">
-                  <div class="col-sm-8">
-                    Children
-                  </div>
-                  <div class="col-sm-4">
-                    <select class="form-control control-label input-sm EdgesSharp" id="NoOfChild">
-                      <option value="0">0</option>
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="row" style="padding-bottom:5px;" id="ChildAgeCol">
-                </div>
-              </div>
-              <div class="row" style="border-top:solid 1px #CCCCCC;padding-top:10px;padding-left:5px;padding-right:5px;padding-bottom:5px">
-                <div class="row">
-                  <div class="col-sm-6 pull-left">
-                    <button type="button" name="button" class="btn btn-success btn-block btn-sm EdgesSharp" id="AddRoom">Add Room</button>
-                  </div>
-                  <div class="col-sm-4 pull-right">
-                    <button type="button" name="button" class="btn btn-primary btn-block btn-sm EdgesSharp" id="DoneRoom"> Done</button>
+                <div class="row" style="border-top:solid 1px #CCCCCC;padding-top:10px;padding-left:5px;padding-right:5px;padding-bottom:5px">
+                  <div class="row">
+                    <div class="col-sm-6 pull-left">
+                      <button type="button" name="button" class="btn btn-success btn-block btn-sm EdgesSharp" id="AddRoom">Add Room</button>
+                    </div>
+                    <div class="col-sm-4 pull-right">
+                      <button type="button" name="button" class="btn btn-primary btn-block btn-sm EdgesSharp" id="DoneRoom"> Done</button>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -93,8 +251,8 @@
           </div>
         </li>
         <li class="col-xs-12 col-sm-6 col-md-6 col-lg-2">
-          <div class="form">
-            <input type="submit" value= "Search" remote = true class="btn btn-primary btn-block EdgesSharp btn-lg" id = "search"> 
+          <div class="FormOrRow">
+            <button class="btn btn-primary btn-block EdgesSharp btn-lg" type="button" name="button" id="searchbar">Search</button>
           </div>
         </li>
       </ul>
@@ -109,28 +267,100 @@
   </div>
 </div>
 <div class="container">
-  <div class="col-sm-3">
-    <div class="box">
+  <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3">
+    <div class="LocationBlock">
       <h3>Manali</h3>
-      <!-- <h5 class="PropertiesNumber"><span><strong>124 </strong></span>Properties</h5>
-      <div class="pricetag "><h4><strong>Average Price : 1200</strong></h4></div> -->
+      <h5 class="PropertiesNumber"><span><strong>124 </strong></span>Properties</h5>
+      <div class="pricetag "><h4><strong>Average Price : 1200</strong></h4></div>
     </div>
   </div>
-  <div class="col-sm-3">
-    <div id="box" class="box">
-        <h3>Manali</h3>
-        <span class="label label-warning PropertiesNumber" style="font-size:14px"><span>525</span> Properties</span>
-        <h5 id="pricetag" class="label label-success" style="font-size:14px">Average Price : <span>1200</span></h5>
+  <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3">
+    <div class="LocationBlock">
+      <h3>Manali</h3>
+      <h5 class="PropertiesNumber"><span><strong>124 </strong></span>Properties</h5>
+      <div class="pricetag "><h4><strong>Average Price : 1200</strong></h4></div>
     </div>
   </div>
-  <div class="col-sm-3">
-    <div class="box">
+  <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3">
+    <div class="LocationBlock">
       <h3>Manali</h3>
-      <!-- <h5 class="PropertiesNumber"><span><strong>124 </strong></span>Properties</h5> -->
-      <!-- <div class="pricetag "><h4><strong>Average Price : 1200</strong></h4></div> -->
+      <h5 class="PropertiesNumber"><span><strong>124 </strong></span>Properties</h5>
+      <div class="pricetag "><h4><strong>Average Price : 1200</strong></h4></div>
     </div>
   </div>
 </div>
+
+<div class="container-fluid" >
+  <div class="col-sm-2 col-sm-offset-5 text-center " >
+    <h3 id="DestinationHeading">Best Hotels</h3>
+  </div>
+</div>
+
+
+<div class="container">
+  <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+    <div class="HotelBlock">
+      <h3>Hotel 1</h3>
+      <!-- <h5 class="PropertiesNumber"><span><strong>124 </strong></span>Properties</h5> -->
+      <div class="pricetag "><h4><strong>Starting From : 1200</strong></h4></div>
+    </div>
+  </div>
+  <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+    <div class="HotelBlock">
+      <h3>Hotel 2</h3>
+      <!-- <h5 class="PropertiesNumber"><span><strong>124 </strong></span>Properties</h5> -->
+      <div class="pricetag "><h4><strong>Starting From : 1200</strong></h4></div>
+    </div>
+  </div>
+  <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+    <div class="HotelBlock">
+      <h3>Hotel 3</h3>
+      <!-- <h5 class="PropertiesNumber"><span><strong>124 </strong></span>Properties</h5> -->
+      <div class="pricetag "><h4><strong>Starting From : 1200</strong></h4></div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid" style="background:yellow">
+  <div class="container" style="background:red">
+    <div class="col-sm-6">
+      0
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<!-- <div class="footer">
+  <div class="container">
+       <div class="col-md-6 col_2">
+     <ul><li><h5>Location:</h5><p>Taste Of India<span> 1.5 km far from Mall Road,</span></p><p>Near Indian Oil Pump, Vashishth Chowk <span>Manali</span></p></li>
+      <li><h5>Phone &amp; Mail</h5><p>Mobile&#128241;<span>+91 - 9736644322</span></p><p>Email:<br><span><a href="tasteofindiamanali@gmail.com">tasteofindiamanali@gmail.com</a></span></p></li>
+     </ul>
+     </ul>
+    </div>
+    <div class="col-md-6 col_3">
+     <div class="col_3">
+     <ul class="menu">
+               <li><a href="index.html">Home</a></li>|
+               <li><a href="index.html">Menu</a></li>|
+               <li><a href="about.html">About</a></li> |
+               <li><a href="services.html">Services</a></li> |
+
+               <li><a href="contact.html">Contact</a></li>
+     </ul>
+     <p>
+      </div>
+    </div>
+  <div class="clearfix"> </div>
+  </div>
+</div> -->
+
+<!-- </p></font><hr><center><h5><u>Copyright© 2018 Taste Of India Manali (Unit of High Adventure). All Rights Reserved.</u></h5> -->
+
+
 
 <script type="text/javascript">
 
@@ -140,7 +370,8 @@
   var todayYear = today.getFullYear();
   var maxyear = todayYear +2;
   var maxMonth = todayMonth +7;
-
+  var checkindatetoserver ='';
+  var checkoutdatetoserver ='';
   if(maxMonth>12){
     maxMonth=maxMonth-12;
   }
@@ -213,9 +444,6 @@
     }
   }
 
-var checkindatetoserver = '';
-var checkoutdatetoserver = '';
-
 $(function() {
 
   $('input[name="datefilter"]').daterangepicker({
@@ -228,7 +456,7 @@ $(function() {
         },
       locale: {
           cancelLabel: 'Clear'
-      }
+                    }
   });
 
   $('input[name="datefilter"]').on('apply.daterangepicker', function(ev, picker) {
@@ -257,7 +485,6 @@ $(function() {
       var lastYear = x[19]+x[20]+x[21]+x[22];
       checkindatetoserver = firstYear+"-" + firstMonth+ "-" +firstDate;
       checkoutdatetoserver = lastYear+"-" + lastMonth+ "-" +lastDate;
-     
       $(this).val(firstDate + "/" + FMonth + "/" +firstYear +" - " +lastDate + "/" + LMonth + "/" +lastYear)
       // $(this).val(picker.startDate.format('DD/'+FMonth+'/YYYY') + ' - ' + picker.endDate.format('DD/'+LMonth+'/YYYY'));
 
@@ -311,6 +538,7 @@ $(function() {
          '</div> </div>'
     }
     document.getElementById('TotalRoom').innerHTML=input;
+    console.log(AdultChild);
   }
 
 
@@ -388,9 +616,52 @@ $(function() {
     }
     document.getElementById('ChildAgeCol').innerHTML=childAgeInp;
   }
-  var v;
+
+  function resizesearchfeild(){
+    if($(window).width() >=768) {
+      $('.FormOrRow').removeClass("row");
+      $('#ContainerOrRow').addClass("container");
+      $('.FormOrRow').addClass("form");
+    }
+    else {
+      $('#ContainerOrRow').removeClass("container");
+      $('.FormOrRow').removeClass("form");
+      $('.FormOrRow').addClass("row");
+    }
+  }
+
+  function resizeRACBlock(){
+    if($(window).width() >=800){
+      $('#DropdownBlockRAC').removeClass("row");
+    }
+    else {
+      $('#DropdownBlockRAC').addClass("row");
+    }
+  }
+  function NavbarTwoAttachOnTop(){
+    if(window.pageYOffset >= 51)
+    {
+      $("#NavbarTwo").addClass("StickNavbarOnTop");
+      $("#DestinationHeading").addClass("AfterPadding");
+    }
+    else{
+      $("#NavbarTwo").removeClass("StickNavbarOnTop");
+      $("#DestinationHeading").removeClass("AfterPadding");
+
+    }
+  }
   $(document).ready(function(){
-     $('#search').click(function(e){
+
+    resizesearchfeild();
+    resizeRACBlock();
+     $(window).resize(function(){
+       resizesearchfeild();
+       resizeRACBlock();
+     });
+
+
+    $('#searchbar').click(function(e){
+      e.preventDefault();
       var city = document.getElementById('Destination').value;
 
         $.ajax({
@@ -413,10 +684,9 @@ $(function() {
                           alert(result.responseText);
                           console.log(status);
                          }
-              });
         });
   
-
+    });
 
 
     $("#AddRoom").click(function(){
@@ -462,5 +732,4 @@ $(function() {
     $('.drpdwn').toggle(250);
   });
 });
-
 </script>
